--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ warp = "0.3.5"
 parking_lot = "0.12.1"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
+fmt = "0.1.0"
 #pretty_env_logger = "0.5.0"
 #log = "0.4.19"
 
